1. Update: - classes: Feline, Lion, LionAlex - interface: Predator - tests: CatTest, FelineParameterizedTest, FelineTest, LionAlexTest, LionParameterizedTest, LionTest 2. Delete: CatParameterizedTest, LionAlexParameterizedTest